# nmr

./: README.md  main_spectrum.html  main_spectrum.ipynb  pyproject.toml
1H/: README.md  Брутоформулы.txt
1H/1H-0-CDCl3.fid/: fid  log  procpar
1H/1H-1-CDCl3.fid/: fid  log  procpar
1H/1H-2-CDCl3.fid/: fid  log  procpar
1H/1H-3-CDCl3.fid/: fid  log  procpar
1H/1H-4-CDCl3.fid/: fid  log  procpar
1H/1H-5-CDCl3.fid/: fid  log  procpar
images/: README.md
videos/: README.md
