[tool.poetry]
name = "nmr"
version = "0.1.0"
description = ""
authors = ["Kligunov <kligunov.id@phystech.edu>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
nmrglue = "^0.10"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
pandas = "^2.2.2"
jupyter = "^1.0.0"
ipympl = "^0.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
